fixed services svg on safari

--- a/src/components/Services/services.module.css
+++ b/src/components/Services/services.module.css
@@ -48,6 +48,8 @@
 }
 .services .servicesCards .card > span > svg{
     width: 80%;
+    height: 100%;
+    object-fit: contain;
 }
 .services .servicesCards .card:last-child > span > svg{
     width: 100%;
